testsuite/poke.pkl/int-union-type-diag-11.pk
/* { dg-do compile } */

type Foo =
  union int<32> /* { dg-error "invalid total size.*\n.*expected 32.*got 0" } */
  {
  };
